style.css
:root {
  --main-font: "Poppins", sans-serif;
  --secondary-color: #bfd0cd;
}
body {
  font-family: var(--main-font);
  background-color: #64462e;
}
header h2 {
  text-align: center;
  color: #fff;
  font-size: 40px;
  line-height: 1;
}
header h1 {
  text-align: center;

  font-weight: 900;
  font-size: 65px;
  color: #fff;
  line-height: 1;
}
header h3 {
  text-align: center;
  color: #fff;
  line-height: 1;
  font-weight: 100;
  font-size: 25px;
}

header {
  max-width: 1200px;
  margin: 0 auto;
  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
    url("images/hogwarts.jpeg");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  text-align: center;
  padding: 160px 0;
}

hr {
  border-top: 2px solid #fff;
  opacity: 0.75;
  width: 80%;
  display: block;
  margin: 0 auto;
}

section {
  max-width: 1200px;
  display: block;
  margin: 0 auto;
  padding: 0 50px 0 50px;
}
.grid {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
}
footer {
  color: #fff;
  background-image: linear-gradient(
      rgba(100, 70, 46, 0.9),
      rgba(100, 70, 46, 0.9)
    ),
    url(images/diagon-alley.jpeg);
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  padding: 100px 0;
}
footer p {
  color: var(--secondary-color);
  font-size: 16px;
  line-height: 24px;
  opacity: 0.7;
}
footer li {
  list-style: none;
  margin-left: -40px;
}
footer a {
  color: #bfd0cd;
  text-decoration: none;
}
.links {
  color: #fff;
}
footer .links:hover {
  text-decoration: underline;
}
.icons {
  margin-top: 10px;
  margin-bottom: 20px;
  font-size: 20px;
  padding: 0 7px;
  transition: all 200ms ease-in-out;
}
.icons:hover {
  transform: scale(1.2);
}

@media (max-width: 960px) {
  header {
    padding: 60px 0;
  }
  header h1 {
    font-size: 40px;
  }
  header h2 {
    font-size: 20px;
  }
  header h3 {
    font-size: 12.5px;
  }
}

